--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container px-5 py-24 mx-auto">
           <div class="text-center mb-20">
             <h1 class="sm:text-3xl text-2xl font-medium text-center title-font text-gray-900 mb-4">Code with Dev</h1>
-            <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto">Make coding easier and intresting.</p>
+            <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto">Make Coding easier & Intresting.</p>
           </div>
           <div class="flex flex-wrap -m-4">
             <div class="p-4 lg:w-1/4 sm:w-1/2 w-full">
